--- a/package.json
+++ b/package.json
@@ -76,7 +76,8 @@
   },
   "dependencies": {
     "babel-runtime": "^6.5.0",
-    "pagination-template": "^0.2.1"
+    "classnames": "^2.2.5",
+    "pagination-template": "^0.4.0"
   },
   "main": "dist/index.js",
   "engines": {
