--- a/package.json
+++ b/package.json
@@ -66,7 +66,9 @@
     "react-dom": "^15.0.0",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
-    "style-loader": "^0.13.1"
+    "style-loader": "^0.13.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^2.1.1"
   },
   "files": [
     "lib"
