--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "React Pag Component",
   "repository": {
     "type": "git",
-    "url": "https://github.com/you/repo.git"
+    "url": "https://github.com/amadormf/react-pag"
   },
   "license": "MIT",
   "scripts": {
