--- a/package.json
+++ b/package.json
@@ -80,8 +80,8 @@
     "babel-runtime": "^6.5.0",
     "classnames": "^2.2.5",
     "pagination-template": "^0.4.0"
-  },
-  "main": "dist/index.js",
+  },  
+  "main": "lib/index.js",
   "engines": {
     "npm": "^3.0.0"
   },
