--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,9 @@ language: node_js
 node_js:
 - "4"
 sudo: false
+cache:
+  yarn: true
+  directories:
+    - node_modules
 script:
-  - npm test
+  - yarn test
